Fixed Database list bullets, social profiles section on smaller screens

--- a/css/nishant_custom.css
+++ b/css/nishant_custom.css
@@ -49,6 +49,10 @@
 	width: 100%;
 }
 
+.databaseListItem {
+	margin: 0px 20px;
+}
+
 @media (max-width: 1200px) {
     .nishantHeaderItem { display: none;}
 	.homeLogo {display: inline; padding: 0px 10px;}
